--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
   "name": "vodafoneparking",
-  "homepage": ".",
+  "homepage": "http://.",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.13",
+    "@openzeppelin/contracts": "^4.8.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@thirdweb-dev/react": "^3.9.0",
     "@thirdweb-dev/sdk": "^3.9.0",
+    "bootstrap": "^5.3.0-alpha1",
     "ethers": "^5.7.2",
+    "html5-qrcode": "^2.3.7",
     "react": "^18.2",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^3.1.0"
+    "react-timer-hook": "^3.0.5",
+    "react-weblineindia-qrcode-scanner": "^1.0.0",
+    "web-vitals": "^3.1.0",
+    "web3": "^1.8.2"
   },
   "devDependencies": {
     "assert": "^2.0.0",
@@ -44,5 +55,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "Create a project using this example:",
+  "main": "config-overrides.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
