Implementation of use cases 1, 2 and 3

--- a/truffle/package.json
+++ b/truffle/package.json
@@ -6,6 +6,8 @@
     "test": "truffle test"
   },
   "dependencies": {
-    "@truffle/hdwallet-provider": "^2.1.7"
+    "@truffle/hdwallet-provider": "^2.1.9",
+    "dotenv": "^16.0.3",
+    "web3": "^1.9.0"
   }
 }
