--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "web3": "^1.8.2"
   },
