--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,23 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.14",
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-qr-reader": "^2.1.4",
+    "@zxing/browser": "^0.1.1",
+    "@zxing/library": "^0.19.2",
+    "bootstrap": "^5.3.0-alpha1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "web3": "^1.8.2"
+    "react-qr-scanner": "^1.0.0-alpha.11",
+    "react-router-dom": "^6.9.0",
+    "react-timer-hook": "^3.0.5",
+    "web3": "^1.9.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
@@ -26,11 +37,11 @@
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.8.5",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.2",
     "typescript": "^5.0.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1",
-    "ts-loader": "^9.4.2"
+    "webpack-dev-server": "^4.11.1"
   },
   "eslintConfig": {
     "extends": [
