Changed the necessary files to be able to deploy all the smart contracts in the project to the Sepolia Ethereum Testnet

--- a/truffle/.env.example
+++ b/truffle/.env.example
@@ -10,3 +10,7 @@
 PRIVATE_KEYS=
 TRUFFLE_PROVIDER_URL=
 
+# If deploying on a node providing service, such as infura.io, please assign the API KEY to the following ENV variable:
+INFURA_API_KEY=
+# Example: INFURA_API_KEY=1234567890abcdef1234567890abcdef
+
