--- a/truffle/package.json
+++ b/truffle/package.json
@@ -13,6 +13,7 @@
     "chai": "^4.3.7",
     "dotenv": "^16.0.3",
     "mocha": "^10.2.0",
+    "truffle": "^5.11.5",
     "truffle-assertions": "^0.9.2",
     "web3": "^1.9.0"
   }
